# pytest-matcher

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .gitlint  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .reuse-hdrmap.json  .travis.yml  .typos.toml  .yamllint.yaml  CONTRIBUTORS.lst  ChangeLog.rst  MANIFEST.in  Pipfile  README.rst  REUSE.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  commit-message.template  pull_request_template.md
.github/workflows/: ChangeLog-quick-check.sh  get-key.py  hatch.build.yaml  linters.yaml  pre-commit-check.yaml  pre-commit-update.yaml  release.yaml  run-tests.yaml
.reuse/: dep5
.reuse/templates/: code.commented.jinja2  misc.commented.jinja2
doc/: api.rst  cli.rst  conf.py  configuration.rst  getting-started.rst  include-traversal-warning.rst  index.rst  latest-changelog.rst  requirements.txt
matcher/: __init__.py  plugin.py
src/matcher/: __init__.py  plugin.py
src/pytest_matcher/: __init__.py  plugin.py
test/: __init__.py  conftest.py  test_foo.py  test_matcher.py
test/data/expected/test_foo/: test_diff.out  test_regex.out
tests/: conftest.py  test_foo.py  test_matcher.py
tests/data/expected/test_foo/: test_on_store_marker.out  test_regex.out
tests/data/expected/test_matcher/: on_store_marker_test[drop_head_1].out  on_store_marker_test[drop_head_2].out  on_store_marker_test[drop_head_and_tail_1].out  on_store_marker_test[drop_tail_1].out  on_store_marker_test[need_escape_regex_chars].out  on_store_marker_test[replace_matched_lines].out  on_store_marker_test[replace_matched_lines_and_drops].out
