#
# SPDX-FileCopyrightText: 2024-now Alex Turbov <zaufi@pm.me>
# SPDX-License-Identifier: CC0-1.0
#

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
# https://packaging.python.org/en/latest/specifications/pyproject-toml
name = "pytest-matcher"
description = "Easy way to match captured `pytest` output against expectations stored in files"
readme = "README.rst"
requires-python = ">=3.10"
license = { file="LICENSES/GPL-3.0-or-later.txt" }
authors = [{ name="Alex Turbov", email="zaufi@pm.me" }]
maintainers = [{ name="Alex Turbov", email="zaufi@pm.me" }]
keywords = [
    "pytest"
  , "plugin"
  ]
# https://pypi.org/classifiers
classifiers = [
    "Development Status :: 5 - Production/Stable"
  , "Framework :: Pytest"
  , "Intended Audience :: Developers"
  , "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
  , "Natural Language :: English"
  , "Operating System :: OS Independent"
  , "Programming Language :: Python :: 3 :: Only"
  , "Programming Language :: Python :: 3.10"
  , "Programming Language :: Python :: 3.11"
  , "Programming Language :: Python :: 3.12"
  , "Topic :: Software Development :: Testing"
  ]
dependencies = [
    "PyYAML"
  , "pytest"
  ]
dynamic = ["version"]

[project.optional-dependencies]
pygments = ["Pygments"]

[project.entry-points.pytest11]
pytest_matcher = "pytest_matcher.plugin"

[project.urls]
Code = "https://github.com/zaufi/pytest-matcher"
Documentation = "https://pytest-matcher.readthedocs.io"
'Issues Tracker' = "https://github.com/zaufi/pytest-matcher/issues"
'Report an Issue' = "https://github.com/zaufi/pytest-matcher/issues/new/choose"

# NOTE: `codespell` isn't tied to any specific environment.
# However, when used as a `pre-commit` hook, it can still
# read configuration options from this file.
[tool.codespell]
builtin = "clear,rare,names,code,en-GB_to_en-US"
check-filenames = ""
context = 3
enable-colors = true
quiet-level = 3
skip = "./build,./dist"

[tool.coverage.html]
directory = "build/coverage"
skip_empty = true
title = "Test Coverage Report"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
    # Don't complain about missing debug-only code:
  , "def __repr__"
  ]

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.hatch]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_matcher"]

[tool.hatch.envs.default]
description = "Development environment"
dependencies = [
    "isort"
  , "mypy"
  , "reuse ~= 5.0"
  , "types-PyYAML"
  , "twine"
  , "vulture"
  , "validate-pyproject[all] >= 0.23"
  ]
installer = "uv"

[tool.hatch.envs.default.scripts]
# Some shortcut commands
all = [
    "dead-check"
  , "dist-check"
  , "license-check"
  , "lint-check"
  , "pyproject-check"
  , "type-check"
  ]
# Various linter commands
dead-check = "vulture src/pytest_matcher"
dist-check = "twine check dist/*"
license-check = "reuse lint"
lint-check = "hatch fmt --check --linter"
pyproject-check = "validate-pyproject {root:real}/pyproject.toml"
type-check = "mypy src/pytest_matcher tests"
# Testing shortcut commands
cov = "hatch test -a --cov"
show-cov = "xdg-open build/coverage/index.html"
test = "hatch test -a"
# Misc commands
annotate-code = "reuse annotate -c \"$(git config --get user.name) <$(git config --get user.email)>\" -t code -l GPL-3.0-or-later {args}"
annotate-misc = "reuse annotate -c \"$(git config --get user.name) <$(git config --get user.email)>\" -t misc -l CC0-1.0 {args}"
dist = "hatch build -t wheel"

[tool.hatch.envs.doc]
description = "Environment to build documentation"
dependencies = [
    "sphinx"
  , "sphinx_rtd_theme"
  ]
installer = "uv"
template = "doc"

[tool.hatch.envs.doc.scripts]
build = "sphinx-build --color -j auto doc/ build/sphinx/html/"
link-check = "sphinx-build --color -b linkcheck doc/ build/sphinx/link-check/"
show = "xdg-open build/sphinx/html/index.html"

[tool.hatch.envs.hatch-static-analysis]
description = "Static analysis environment"
dependencies = ["ruff ~= 0.12.5"]
config-path = "none"

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = "echo Sorry, format check is unsupported in this project."
format-fix = "echo Sorry, format fix is unsupported in this project."
lint-check = "ruff check src/ tests/ doc/"
lint-fix = "echo Sorry, lint fix is unsupported in this project."

[tool.hatch.envs.hatch-test]
description = "Unit tests environment"
dependencies = []

[[tool.hatch.envs.hatch-test.matrix]]
pytest = ["pytest.8x", "pytest.7x"]

[tool.hatch.envs.hatch-test.overrides]
matrix.pytest.dependencies = [
    "coverage[toml]"
  , { value = "pytest ~= 8.0", if = ["pytest.8x"] }
  , { value = "pytest ~= 7.0", if = ["pytest.7x"] }
  ]

[tool.hatch.envs.hatch-test.scripts]
cov-combine = "coverage combine"
cov-report = ["coverage report", "coverage html"]
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
run = "pytest{env:HATCH_TEST_ARGS:} -o cache_dir=build/.{matrix:pytest}_cache {verbosity:flag} {args}"

[tool.hatch.version]
source = "vcs"
tag-pattern = "release/(.*)"

[tool.isort]
honor_noqa = true
import_heading_firstparty = "Project specific imports"
import_heading_localfolder = "Local imports"
import_heading_stdlib = "Standard imports"
import_heading_thirdparty = "Third party packages"
multi_line_output = 3
use_parentheses = true

[tool.mypy]
cache_dir = "build/.mypy_cache"
check_untyped_defs = true
disallow_any_decorated = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_any_decorated = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
module = [
    "tests.test_foo"
  , "tests.test_matcher"
  ]

[tool.pylint.BASIC]
const-naming-style = "UPPER_CASE"

[tool.pylint.DESIGN]
max-args = 6
max-attributes = 9
max-branches = 15
max-locals = 20
max-statements = 80
min-public-methods = 0

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.LOGGING]
logging-format-style = "new"

[tool.pylint.MISCELLANEOUS]
notes = []

[tool.pytest.ini_options]
addopts = "-ra"
cache_dir = "build/.pytest.8x_cache"
log_cli = true
markers = ["wip: work in progress"]
minversion = "7.0"
python_classes = ["*Tester"]
python_files = ["test_*.py"]
python_functions = ["*_test", "*_test_?", "*_test_??", "test_*"]
testpaths = ["tests"]
xfail_strict = true

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
cache-dir = "build/.ruff_cache"
line-length = 120
output-format = "full"
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "COM812"    # Trailing comma missing
  , "FIX002"    # Line contains TODO (and it's OK ;-)
  , "S101"      # Use of `assert` detected (and it's OK, especially in tests ;)
  , "TD002"     # Missing author in TODO
  , "TD003"     # Missing issue link on the line following this TODO
  , "TD004"     # Missing colon in TODO
  ]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"doc/conf.py" = [
    "INP001"
  , "D100"      # Missing docstring in public module
  , "A001"      # Variable `copyright` is shadowing a Python builtin
  ]
"tests/test_*.py" = [
    "ANN001"    # Missing type annotation for function argument
  , "D"         # Documentation issues
  , "PLR2004"   # Magic value used in comparison
  ]
"tests/test_foo.py" = [
    "T201"      # `print` found
  , "E712"      # Comparison to `True`
  , "DTZ005"    # The use of `datetime.datetime.now()` without `tz` argument is not allowed
  ]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["pytest_matcher"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# NOTE: `typos` isn't tied to any specific environment.
# However, when used as a `pre-commit` hook, it can still
# read configuration options from this file.
[tool.typos.default]
check-file = true
check-filename = true
extend-ignore-re = [
    # NOTE Allow to mark block of text to exclude from spellchecking inside C++ or Python comments
    "(?s)(#|//)\\s*(NOQA|noqa):? spellcheck(: *|=| +)off.*?\\n\\s*(#|//)\\s*(NOQA|noqa):? spellcheck(: *|=| +)on"
    # NOTE Allow to mark a line to exclude from spellchecking
  , "(?Rm)^.*(#|//)\\s*(NOQA|noqa):? spellcheck(: *|=| +)disable-line$"
    # NOTE Stop checking from this line to the end of file
    # This line is a marker added by Git to the `COMMIT_EDITMSG`.
  , "(?sm)^# ------------------------ >8 ------------------------$.*"
  ]
locale = "en-us"

[tool.typos.default.extend-words]
ret = "ret"

[tool.typos.type.rst]
extend-ignore-re = [
    # NOTE Allow to mark block of text to exclude from spellchecking as RST comments
    "(?s)\\.\\.\\s+(NOQA|noqa):? spellcheck(: *|=| +)off.*?\\n\\.\\.\\s+(NOQA|noqa):? spellcheck(: *|=| +)on"
  ]

[tool.vulture]
ignore_names = ["kwargs", "args"]
min_confidence = 61
