[metadata]
name = pytest-matcher
version = 1.3.0
author = Alex Turbov
author_email = i.zaufi@gmail.com
license = GPLv3+
license_file = LICENSE
description = 'Match test output against patterns stored in files'
long-description = file: README.rst
long_description_content_type = text/x-rst
keywords = 'pytest plugin'
requires = pytest
platform = any
url = http://zaufi.github.io/programming/2017/07/05/extend-pytest-with-fixtures
download_url = https://github.com/zaufi/pytest-matcher/archive/release/$version.tar.gz
project_urls =
    Source=https://github.com/zaufi/pytest-matcher,
    Tracker=https://github.com/zaufi/pytest-matcher/issues
classifiers =
    Framework :: Pytest
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Testing
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
python_requires = ~=3.4
packages = matcher
zip_safe = True

[options.entry_points]
pytest11 = output_pattern_match = matcher.plugin


[aliases]
release = dists upload
dists = clean --all sdist bdist_egg

[wheel]
universal = 1

[tool:pytest]
testpaths = test
python_files = test_*.py
python_classes = *_tester
python_functions = *_test *_test_? *_test_??
